--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,18 @@ services:
     restart: unless-stopped
     build: .
     environment:
+      EOS_NODE_URL:
+      EOS_NODE_PORT:
+
+      ISSUER_WIF:
+      ISSUER_NAME:
+      ISSUE_ASSET:
+
+      BITSHARES_NODE_URL:
+      GATEWAY_ACCOUNT:
+      GATEWAY_ACCOUNT_WIF:
       START_BLOCK:
+
       DEBUG: "false"
     volumes:
       - ./data:/app/data/
